test/e2e/testdata/client-mtls-trustbundle.yaml
# ./certs/client-mtls-trustbundle.sh
#
# kubectl create secret generic example-com-tls -n gateway-conformance-infra --from-file=ca.crt=example.com.crt --from-file=tls.crt=www.example.com.crt --from-file=tls.key=www.example.com.key --dry-run=client -o yaml > example-com-tls.yaml
apiVersion: v1
data:
  ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURWVENDQWoyZ0F3SUJBZ0lVRVBkYmJhOHR1V1pPelloWFV0UXhUVWNvTW1Fd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5qQTJNakF3T1RNMU1USmFGdzB6TmpBMk1UY3dPVE0xTVRKYU1DMHhGVEFUQmdOVkJBb01ER1Y0CllXMXdiR1VnU1c1akxqRVVNQklHQTFVRUF3d0xaWGhoYlhCc1pTNWpiMjB3Z2dFaU1BMEdDU3FHU0liM0RRRUIKQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNra3Y4UnpuUlJPTW44bXpGUTN0WHJ6Si9WMEFtNllDclJ6WFd3Y2dxbApocUFoNURUT2xtRVZzbX [...]
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQwakNDQXJxZ0F3SUJBZ0lVTnI2RnJXTE5FNnpLMEd2NGhsdng5bGtDS3Brd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5qQTJNakF3T1RNMU1UaGFGdzB6TmpBMk1UY3dPVE0xTVRoYU1Ea3hHREFXQmdOVkJBTU1EM2QzCmR5NWxlR0Z0Y0d4bExtTnZiVEVkTUJzR0ExVUVDZ3dVWlhoaGJYQnNaU0J2Y21kaGJtbDZZWFJwYjI0d2dnRWkKTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFDMU85UW5GcUg2UU5YanAxYVFvT2JhVjM2bgo4S25OZGg5NGxuckYwW [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRQzFPOVFuRnFINlFOWGoKcDFhUW9PYmFWMzZuOEtuTmRoOTRsbnJGMFg4cXRqUWVCb2ZKV3grZjByNmsrMzU3SzN3MW5od0RFQ0FORnhwOQpyaDNuWkxlZklmV29yZ1EzWk1wVm52K1J5TTZxaVl0cEIvTkJ3V3FPeE10TGR6VFZDV0JtNzNPUnJ2SXBRQkMwCkRDdzJYVmlVSWpoT3JodW1NNEE4Y253aytCUGZxaUFpOFdPUm55ZWExbUVIQ1hLbmR2UlhLeWlDU1JVYk00M2sKZi9pZjhveDNySkZkbUJxWGpPL1lvK0FvQVQ4dTdybVJaZkFleTlad1NmWnRiclBDVnkzY1NyM09BSG9hK1VHMQpCVk53aG94c1pxOWpDe [...]
kind: Secret
metadata:
  creationTimestamp: null
  name: example-com-tls
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
---
apiVersion: certificates.k8s.io/v1beta1
kind: ClusterTrustBundle
metadata:
  name: example-com-tls
spec:
  trustBundle: |
    -----BEGIN CERTIFICATE-----
    MIIDVTCCAj2gAwIBAgIUEPdbba8tuWZOzYhXUtQxTUcoMmEwDQYJKoZIhvcNAQEL
[...]
    tyG9Yw280uUerBVpvHVTZKx0YZ4+mAzJfIAvbd6hzNFe/TmzT/j6rKc=
    -----END CERTIFICATE-----
  # The following is an example of a client certificate that can be used to test mTLS with the above CA.
  # It is not required for the ClusterTrustBundle, but can be used to create a Kubernetes secret for testing.
  # To generate a client certificate, you can use the following commands:
---
# kubectl create secret generic client-example-com -n gateway-conformance-infra --from-file=ca.crt=example.com.crt --from-file=tls.crt=client.example.com.crt --from-file=tls.key=client.example.com.key --dry-run=client -o yaml > client-example-com.yaml
apiVersion: v1
data:
  ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURWVENDQWoyZ0F3SUJBZ0lVRVBkYmJhOHR1V1pPelloWFV0UXhUVWNvTW1Fd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5qQTJNakF3T1RNMU1USmFGdzB6TmpBMk1UY3dPVE0xTVRKYU1DMHhGVEFUQmdOVkJBb01ER1Y0CllXMXdiR1VnU1c1akxqRVVNQklHQTFVRUF3d0xaWGhoYlhCc1pTNWpiMjB3Z2dFaU1BMEdDU3FHU0liM0RRRUIKQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNra3Y4UnpuUlJPTW44bXpGUTN0WHJ6Si9WMEFtNllDclJ6WFd3Y2dxbApocUFoNURUT2xtRVZzbX [...]
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQyRENDQXNDZ0F3SUJBZ0lVTnI2RnJXTE5FNnpLMEd2NGhsdng5bGtDS3Bvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5qQTJNakF3T1RNMU1qVmFGdzB6TmpBMk1UY3dPVE0xTWpWYU1Ed3hHekFaQmdOVkJBTU1FbU5zCmFXVnVkQzVsZUdGdGNHeGxMbU52YlRFZE1Cc0dBMVVFQ2d3VVpYaGhiWEJzWlNCdmNtZGhibWw2WVhScGIyNHcKZ2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRFExcElTLzArUlkrbzNoU0JtVWV3cgo0aEIwYnBzYm9rNjF0R [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRRFExcElTLzArUlkrbzMKaFNCbVVld3I0aEIwYnBzYm9rNjF0RVVLanE4SWZJRmZNNkFlek5lMmh4eFE0UG1DenZwT2dobmNUZnFLb0dBaQpxU3pwMmgvTEpPaXBoOEJDTFAvSHgrUDNVSm1yUUh3dXJFcDZVc2lMTm5HVkI2R3hxNXJTbE9YeTQ5eG8wT21wClRZUWxLUXdWcWlDNGNyaUFuczhWYlRuL1h6TU1DNDh5aHEzRmJIWE5jbHo3V1BoL0tmNHB4alJPZmx6aFhUSzQKbFRyek5oTUwwSXRFVmVONkZnK2ZkeTFuKzUrcVJ1aDhhUS9DSlhzV2REZFVZaXJwdVR5OTE4cjFmWTZDMmNaNwpsRjZ5dFFCNFZVb0o4a [...]
kind: Secret
metadata:
  creationTimestamp: null
  name: client-example-com
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: client-mtls-clustertrustbundle
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: mtls
      port: 443
      protocol: HTTPS
      hostname: www.example.com
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: example-com-tls
        mode: Terminate
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: client-mtls-clustertrustbundle
  namespace: gateway-conformance-infra
spec:
  hostnames:
    - www.example.com
  parentRefs:
    - name: client-mtls-clustertrustbundle
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /cluster-trust-bundle
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: ctp-client-mtls-clustertrustbundle
  namespace: gateway-conformance-infra
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: client-mtls-clustertrustbundle
    sectionName: mtls
  headers:
    xForwardedClientCert:
      certDetailsToAdd:
        - Subject
      mode: SanitizeSet
  tls:
    clientValidation:
      caCertificateRefs:
        - kind: ClusterTrustBundle
          group: ""
          name: example-com-tls
